--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LihatZona.LihatZona"></activity>
+        <activity android:name=".Menu.Tampil_history"></activity>
+        <activity android:name=".TriggerSiram.TriggerWaterLevel" />
+        <activity android:name=".LihatZona.LihatZona" />
         <activity android:name=".SetZona.SetZona" />
         <activity android:name=".MenuJadwal.AturJadwalSiram" />
-        <activity android:name=".DaftarZona.SiramZona" />
+        <activity android:name=".SiramZona.SiramZona" />
         <activity android:name=".configwifi.wifi" />
-        <activity android:name=".DaftarZona.MenuInputLahan" />
+        <activity android:name=".SiramZona.MenuInputLahan" />
         <activity android:name=".Mapping.GetLatLong" />
-        <activity android:name=".DaftarZona.InputLahan" />
+        <activity android:name=".SiramZona.InputLahan" />
         <activity android:name=".MenuScanBarcode.AddDevice" />
         <activity android:name=".Mapping.LineDistance" />
         <activity android:name=".TestPolyline.Polyline" />
